tests/NormalTests/paczka2/big_fuzzy/59264422.err
Error in line 7: 9g9Au A334 49,2
Error in line 14: 9g9Au S235 -5,5
Error in line 27: nhmB05my A69 82,0
Error in line 33: nhmB05my A334 54,3
Error in line 37: WK8VMb50EB A334 79,1
Error in line 45: GjFt4DVX A678 44,5
Error in line 46: GjFt4DVX S235 95,0
Error in line 53: GjFt4DVX A334 36,0
Error in line 49: 9g9Au A678 11,3
Error in line 57: GjFt4DVX S235 70,7
Error in line 77: 9g9Au A334 -3,2
Error in line 73: GjFt4DVX A678 66,7
Error in line 90: 7wn2DPH2 S235 4,6
Error in line 103: 7wn2DPH2 A69 14,5
Error in line 84: GjFt4DVX A334 52,4
Error in line 101: nhmB05my A69 40,8
Error in line 118: VmXhBTZg1il A334 285,0
Error in line 128: nhmB05my S235 199,4
Error in line 132: 9g9Au A334 29,8
Error in line 147: GjFt4DVX A69 96,8
Error in line 155: GjFt4DVX A678 65,8
Error in line 163: nhmB05my S235 148,8
Error in line 178: WK8VMb50EB A334 94,2
Error in line 177: A678 S235 46,1
Error in line 182: A678 A69 50,7
Error in line 191: A678 S235 45,3
Error in line 202: 7wn2DPH2 A69 18,8
Error in line 195: VmXhBTZg1il A334 65,7
Error in line 217: VmXhBTZg1il A334 13,9
Error in line 219: VmXhBTZg1il A678 90,4
Error in line 233: VmXhBTZg1il S235 80,4
Error in line 234: VmXhBTZg1il A678 8,0
Error in line 239: VmXhBTZg1il S235 39,2
Error in line 236: 9g9Au A69 60,4
Error in line 245: VmXhBTZg1il A334 4,3
